--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,22 +6,78 @@
   justify-content: center;
   align-items: center;
 }
-
+.nav {
+  position: absolute;
+  left:0;
+  top:0;
+  width: 100%;
+  border-bottom: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.nav h2 {
+  margin-left: 1.5rem;
+}
+.nav div p {
+  font-size: 1rem;
+}
+.nav div {
+  margin-right: 0.5rem;
+  padding-left: 0.2rem;
+  padding-right: 0.2rem;
+  border-radius: 1rem;
+  
+}
+.nav div:hover {
+  border: 1px solid rgba(128, 128, 128, 0.226);
+  cursor: pointer;
+  background-color:rgba(0, 0, 0, 0.13);
+}
 .main {
   padding: 5rem 0;
+  width: 60%;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  
+}
+.input {
+  display: none;
+}
+.input-submit {
+  width: 100;
+}
+.button{
+  margin-top:1rem;
+  padding:0.2rem;
+  font-size: 1.5rem;
+  z-index: 10;
+  box-shadow: 1px 1px 4px 1px rgba(0, 0, 255, .2);
+}
+.button:hover{
+  cursor: pointer;
+}
+.label {
+  font-size: 2rem;
+  margin-bottom:2rem;
 }
 
+.label:hover {
+  
+  text-decoration: underline;
+  cursor: pointer;
+}
 .footer {
   width: 100%;
   height: 100px;
   border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
+  
   align-items: center;
 }
 
