--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -37,13 +37,16 @@
 }
 .main {
   padding: 5rem 0;
-  width: 60%;
+  width: 80%;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   
+}
+.div {
+  width: 100%;
 }
 .input {
   display: none;
