--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,20 +20,29 @@
 .nav h2 {
   margin-left: 1.5rem;
 }
+.nav h2:hover{
+  cursor: pointer;
+}
 .nav div p {
   font-size: 1rem;
 }
 .nav div {
   margin-right: 0.5rem;
-  padding-left: 0.2rem;
-  padding-right: 0.2rem;
   border-radius: 1rem;
   
 }
 .nav div:hover {
-  border: 1px solid rgba(128, 128, 128, 0.226);
+  text-decoration: underline;
   cursor: pointer;
-  background-color:rgba(0, 0, 0, 0.13);
+  font-weight: 500;
+
+}
+
+.pdesc {
+  opacity: 0.7;
+  text-align: center;
+  position: relative;
+  top:4rem ;
 }
 .main {
   padding: 5rem 0;
@@ -44,6 +53,55 @@
   justify-content: center;
   align-items: center;
   
+}
+.main .button{
+  border-radius: 0.4rem;
+  margin-top: 3rem;
+  padding-left:1rem;
+  padding-right:1rem;
+  padding-top: 0.7rem;
+  padding-bottom: 0.7rem;
+  border: 2px solid black;
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 255, .2);
+}
+.main .button:hover{
+  background-color: rgba(0, 0, 0, 0.521);
+  color:white;
+  box-shadow: 1px 1px 2px 1px rgba(0, 132, 255, 0.514);
+}
+.main p {
+  opacity:0.7;
+  font-size: 1rem;
+  margin-top: 1px;
+}
+.main .button1 {
+  border-radius: 0.3rem;
+  margin-top: auto;
+  padding-left:0.5rem;
+  padding-right:0.5rem;
+  padding-top: 0.3rem;
+  padding-bottom: 0.3rem;
+  border: 2px solid black;
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 255, .2);
+}
+.main .button1:hover{
+  background-color: rgba(0, 0, 0, 0.521);
+  color:white;
+  box-shadow: 1px 1px 2px 1px rgba(0, 132, 255, 0.514);
+}
+.button2 {
+  border-radius: 0.3rem;
+  padding-left:0.5rem;
+  padding-right:0.5rem;
+  padding-top: 0.3rem;
+  padding-bottom: 0.3rem;
+  border: 2px solid black;
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 255, .2);
+}
+.button2:hover{
+  background-color: rgba(0, 0, 0, 0.521);
+  color:white;
+  box-shadow: 1px 1px 2px 1px rgba(0, 132, 255, 0.514);
 }
 .div {
   width: 100%;
