--- a/components/Modal.module.css
+++ b/components/Modal.module.css
@@ -6,6 +6,7 @@
     display:flex;
     justify-content: center;
     flex-direction: row;
+    align-items: center;
 }
 .div button {
     margin-left: 0.8rem;
